--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,6 @@ body {
 }
 
 #div-target {
-	padding-top: 100px;
 	display: flex;
 	justify-content: space-around;
 }
@@ -106,11 +105,12 @@ body {
 	color: #000;
 	background-color: red;
 	text-align: center;
-	padding: 15px;
 	font-size: 110px;
 	border-radius: 20px 20px 0px 0px;
 }
-
+.name-target > p {
+	margin-bottom: 0 !important;
+}
 .content-target {
 	background-color: #dcc410;
 	font-size: 80px;
@@ -119,13 +119,11 @@ body {
 }
 .content-target > ul {
 	list-style: none;
-	padding-top: 100px;
 	padding-bottom: 40px;
 	margin-bottom: 0;
 }
 
 .content-target > ul > li {
-	padding: 10px;
 	color: #000;
 }
 .boton {
@@ -236,3 +234,37 @@ body {
 }
 
 
+/* infor */
+#main{
+	overflow: hidden;
+}
+.volver-info{
+	position: absolute;
+	width: 100%;
+	z-index: 500;
+}
+.contenedor-principal{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-top: 2rem;
+}
+
+.imagen-content{
+	height: 990px;
+	width: auto;
+}
+
+.contenedor-texto{
+	text-align: center;
+	padding: 0 180px 40px 0;
+	line-height: 3.2rem;
+}
+.title-dino{
+	font-size: 10.5rem;
+	margin-bottom: 8.5rem;
+}
+.descripcion-dino{
+	font-size: 5rem;
+	text-align: justify;
+}
